# ProjektIIS2

./: README.md  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: fetch_data.yml
data/preprocessed/price/: bitcoin.csv  ethereum.csv  solana.csv
data/raw/: crypto_prices.json
src/data/: fetch_save.py
