[tool.poetry]
name = "projektiis"
version = "0.1.0"
description = "Okolje za projekt pri projaktu za IIS"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
aiohttp = "^3.11.14"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
